--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "sass-loader": "^13.3.2",
     "vue": "^3.2.13",
+    "vue-material-design-icons": "^5.2.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
